Finish rewriting paper

--- a/paper.tex
+++ b/paper.tex
@@ -6,7 +6,7 @@
 %\usepackage[•]{•}ckage{float}
 %\usepackage{cite}% para contraer referencias
 %\usepackage[usenames]{color}
-\usepackage{showkeys}
+%\usepackage{showkeys}
 \usepackage{bm}
 \usepackage{hyperref}
 \usepackage[normalem]{ulem} %opcional para la correcciones
@@ -877,33 +877,34 @@ to derive an expression for the calculation of the electric current
 density along the surface of a Si sample. The expression was obtained
 by using image charge theory and a planewise summation of Coulomb
 potentials in 2D reciprocal space, and it is made up of
-a rapidly converging sum of analytical terms. This allows the characterization
+a rapidly converging sum of analytical terms, just a few of which
+should be kept. This allows the characterization
 of the porosity of a PS layer and the etching
 rate for different values of the etching current density by making
 optical measurements on several positions of just a
-few samples. We illustrated the procedure with two samples each of which we
-measured at three different positions. These calibration curves are
-very useful as the etching rate for the formation of porous silicon
-and the resulting porosity is very sensitive to the growth conditions
-and to the properties of the substrate, such as its doping. Thus,
-there are no universal calibration curves. Having obtained these calibration curves
-and being able to compute the current density at different positions
-allows the prediction of the properties of GRIN structures. We
-illustrated this by desigining a PS GRIN microcavity tuned at one
-position to a given wavelength. We found a good agreement between its
-measured reflectance spectra at different points with the spectra
-calculated from the values of the expected local current
-density using the calibration curves. We also found good agreement
-between the measured and the expected geometry of the system. These
-results show that the use of a simple electrolytic cell and our
-computational procedure does allow the accurate prediction of the
-optical properties of GRIN structures, and thus we believe it will
-prove helpful for the design, fabrication, and characterization of novel
-devices based on PS GRIN systems.
+few samples. We illustrated the procedure with three samples on each of which we
+measured reflectance spectra at eight different positions.
+Through a optimization procedure we fitted the porosity and etching
+rate corresponding to each current density.
+We showed that an analysis of the data of just one of the samples, which we chose
+as that with the largest current density range, yielded calibration
+curves that allow the approximate prediction of the properties of the other
+samples. The calibration curves can be used to design and calculate the optical
+properties of other systems prepared under similar conditions, such as
+multilayered GRIN systems from which photonic crystals, microcavities
+and sensors with position dependent properties. This is the subject of
+ongoing work. As the etching rate for the formation of porous silicon
+and the resulting porosity are very sensitive to the growth conditions
+and to the properties of the substrate, such as its doping,
+there are no universal calibration curves. Thus, it is useful to have
+a procedure that from just one sample can produce calibration curves
+that may be employed for other samples grown in the same conditions.
 
 \section*{Acknowledgments}
 \label{sec:acknowledgments}
-WLM acknowledges the support of DGAPA-UNAM under grant IN111119.
+WLM acknowledges the support of DGAPA-UNAM under grant
+IN111119. \notaL{Cristian debe agradecer a conacyt y faltan
+  agradecimientos de Vivechna (quizás incluyendo al icf)}
 % \backmatter
 %\nocite{*}
 %\bibliographystyle{plain}
