--- a/paper.tex
+++ b/paper.tex
@@ -168,7 +168,7 @@ but for a small tip, which we approximate as a
 point current source.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Images/celdan1}
+  \includegraphics[width=\textwidth]{celdan1}
   \caption{Prism shaped electrolytic cell with a rectangular base of
     sides $a$, $b$ filled with electrolyte up to a height $c$. The
     walls of the cell are insulating and the bottom is completely
@@ -529,17 +529,6 @@ y_0,z_0)=(0.2\,\text{cm},0.74\,\text{cm},0.9\,\text{cm})$. \notaL{Checa todos es
 We manufactured three samples $G_1$, $G_2$ and $G_3$ by applying a
 current $I_1=5\,\text{mA}$, $I_2=10\,\text{mA}$ and
 $I_3=20\,\text{mA}$, respectively, during a time of $t=250s$.
-
-\ifinclude
-\notaL{Tal vez esto no lo hicimos:
-  \subsection{Morphological studies}
-\label{sec:morph-stud}
-The morphologies of the etched porous layers were
-observed using a Hitachi SU1510 scanning electron microscope (SEM)
-with which we measured the thickness $d$ and the porosity $p$ of the
-films at different positions along the sample from its top and side
-views (Fig. \ref{fig:DE1}).} \notaL{¿Sí se midió la porosidad con SEM?}
-\fi %include
 
 \subsection{Reflectance Measurement}
 \label{sec:refl-meas}
